--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>UMKM.AI - AI Image Generator untuk UMKM Indonesia</title>
+    <meta name="description" content="Buat gambar profesional untuk bisnis UMKM Anda dalam hitungan detik. Tanpa skill desain. Tanpa biaya mahal." />
+    <meta name="author" content="UMKM.AI" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="UMKM.AI - AI Image Generator untuk UMKM Indonesia" />
+    <meta property="og:description" content="Buat gambar profesional untuk bisnis UMKM Anda dalam hitungan detik. Tanpa skill desain. Tanpa biaya mahal." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="UMKM.AI - AI Image Generator untuk UMKM Indonesia" />
+    <meta name="twitter:description" content="Buat gambar profesional untuk bisnis UMKM Anda dalam hitungan detik" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
